--- a/CSS/starbucks.css
+++ b/CSS/starbucks.css
@@ -4,9 +4,6 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
-
-
-/*ESTILIZANDO HEADER - CABEÇALHO*/
 header {
     display: flex;
     justify-content: space-between;
@@ -47,12 +44,6 @@ a {
     font-size: 10px;
 }
 
-.botao-branco:hover {
-    background-color: lightgrey;
-    transition: 0.5s;
-    box-shadow: 2px 2px 2px gray;
-}
-
 .botao-preto {
     background-color: black;
     color: white;
@@ -61,33 +52,70 @@ a {
     font-size: 10px;
 }
 
-.botao-preto:hover {
-    transform: scale(0.9);
-    transition: 0.5s;
-}
-
 .botao-loja {
     display: flex;
     align-items: center;
 }
-
 .botoes-menu {
     display: flex;
     justify-content: space-between;
 }
-
-/*ESTILIZANDOA CLASSE MAIN*/
-main {
-    max-width: 1300px;
-    margin: 0 auto;
+.card-com-img {
+    height: 500px;
 }
 
-main>img {
-    width: 100%;
+.card-com-img>div {
+    background-color: white;
+   
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
 }
+.botao-branco:hover {
+    background-color: #00a862;
+    color: white;
+    transition: 0.5s;
+    box-shadow: 2px 2px 2px gray;
+}
+.botao-branco {
+    background-color: #00a862;
+    color: white;
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 20px;
+    padding: 5px 10px;
+    font-size: 10px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .cardi1 {
-    background-color: #d4e9e2;
+    background-color: white;
     margin-top: 20px;
     margin-bottom: 20px;
     padding: 20px;
@@ -104,12 +132,8 @@ main>img {
     margin-bottom: 20px;
 }
 
-.card-com-img>img {
-    width: 50%;
-}
-
 .card-com-img>div {
-    background-color: #d4e9e2;
+    background-color: white;
     width: 50%;
     display: flex;
     flex-direction: column;
@@ -123,19 +147,4 @@ main>img {
     justify-content: center;
     box-shadow: 0 0 5px black;
     padding: 30px;
-}
-
-@media (max-width:600px) {
-    header {
-        flex-direction: column;
-    }
-    .card-com-img {
-        flex-direction: column;
-    }
-    .card-com-img > img {
-        width: 100%;
-    }
-    .card-com-img > div {
-        width: 100%;
-    }
 }
